# merge-point-clouds

./: .gitignore  CMakeLists.txt  README.md  torsoDemo.cpp
app/: CMakeLists.txt  system.docx  system.xml
app/conf/: config.ini
app/data/: octopus1.ply  octopus2.ply  octopus3.ply  octopus_pink1.ply  octopus_pink2.ply  octopus_pink3.ply  tube1.ply  tube2.ply  tube3.ply
app/scripts/: merge-point-clouds.xml
exploreTorso/: CMakeLists.txt  torsoDemo.cpp
exploreTorso/app/: system.xml
manager/: CMakeLists.txt  main.cpp
mergeClouds/: CMakeLists.txt  merge_point_clouds.cpp  merge_point_clouds.cpp~
mergeClouds/app/: CMakeLists.txt
mergeClouds/app/conf/: config.ini
